syntax = "proto3";

package chat;

option go_package = "./pb";

service ChatService {
  rpc Chat(MessageRequest) returns (MessageResponse) {}
  rpc ChatStream(MessageRequest) returns (stream MessageResponse) {}
}

message MessageRequest {
  string content = 1;
}

message MessageResponse {
  string content = 1;
}